# cpparmc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: armc.h  compile_base.h  setting.h
include/__impl/: compile_base.h  darray.hpp  fibonacci_code.h  fibonacci_code.inc  logger.hpp
include/__impl/file/: handler_mixin.h  reader.h  writer.h
include/__impl/stream/: bit_stream.hpp  file_device.hpp  generator.hpp  stream_base.hpp  string_stream.hpp
include/__impl/stream/arithmetic/: codec_mixin.h  codec_mixin.hpp  decode.hpp  encode.hpp  mixin.hpp
include/__impl/stream/bwt/: decode.hpp  encode.hpp
include/__impl/stream/bwtrle/: decode.hpp  encode.hpp
include/__impl/stream/fabonacci/: decode.hpp  encode.hpp  fibonacci_code.h
include/__impl/stream/file/: base.hpp  read.hpp  write.hpp
include/__impl/stream/io/: buffer_io.hpp  file.hpp  stdin.hpp
include/__impl/stream/rle/: decode.hpp  encode.hpp
include/__impl/stream/stdio/: read.hpp
include/__impl/utils/: asum_tree.hpp  bit_operation.hpp  bit_utils.hpp  darray.hpp  index_tree.hpp  shortcut.hpp  timer.hpp
include/format/: armc_file.h  armc_package.h
include/stream/: generator.hpp
include/stream/arithmetic/: decode.hpp  encode.hpp  mixin.hpp
include/stream/bwt/: decode.hpp  encode.hpp
include/stream/fabonacci/: fibonacci_code.h
include/stream/fibonacci/: decode.hpp  encode.hpp  fibonacci_code.h
include/stream/io/: buffer_io.hpp  file.hpp  stdin.hpp
include/stream/rle/: decode.hpp  encode.hpp
include/utils/: darray.hpp  index_tree.hpp  timer.hpp
src/: CMakeLists.txt  cli.cpp  command.cpp
src/file/: handler_mixin.cpp  reader.cpp  writer.cpp
test/: CMakeLists.txt  test_arithmetic.cpp  test_arithmetic_decode.cpp  test_asum_tree.cpp  test_bit_stream.cpp  test_bwt_stream.cpp  test_fabonacci.cpp  test_fibonacci.cpp  test_read_write.cpp
