PROJECT(armc-cli LANGUAGES CXX)

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED True)
SET(CMAKE_CXX_FLAGS "-std=c++17 ${CMAKE_CXX_FLAGS}")
SET(CMAKE_CXX_FLAGS_DEBUG " -O0 -g3")
SET(CMAKE_CXX_FLAGS_RELEASE "-O3 -g0 -march=native -fopt-info")
SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)
SET(CMAKE_VERBOSE_MAKEFILE ON)

MESSAGE(CMAKE_CXX_FLAGS: ${CMAKE_CXX_FLAGS})

SET(src ${CMAKE_CURRENT_SOURCE_DIR}/command.cpp)

GET_FILENAME_COMPONENT(name ${src} NAME_WE)
MESSAGE("*** Now compile `${name}` for current test file ${src}. ")

ADD_EXECUTABLE(${PROJECT_NAME} ${src})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} spdlog gtest)
TARGET_COMPILE_FEATURES(${PROJECT_NAME} PUBLIC cxx_std_17)
